Finished for mock

--- a/john_orals.css
+++ b/john_orals.css
@@ -16,3 +16,8 @@ slides > slide.nb2:after {
   right: 60px;
   line-height: 1.9;
 }
+
+table.rmdtable tr, table.rmdtable td {
+    padding-top: 0em;
+    padding-bottom: 0em;
+}
