--- a/Oral_Proposal_files/ioslides-13.5.1/theme/css/default.css
+++ b/Oral_Proposal_files/ioslides-13.5.1/theme/css/default.css
@@ -242,7 +242,8 @@ slides > slide {
   display: none;
   font-family: 'Open Sans', Arial, sans-serif;
   font-size: 26px;
-  color: #797979;
+  /*color: #797979;*/
+  color: #000000;
   width: 900px;
   height: 700px;
   margin-left: -450px;
@@ -1237,7 +1238,7 @@ article.smaller q:before, article.smaller q:after {
 /* line 820, ../scss/default.scss */
 .segue hgroup {
   position: absolute;
-  bottom: 225px;
+  bottom: 350px;
 }
 
 /* line 826, ../scss/default.scss */
