--- a/john_orals.css
+++ b/john_orals.css
@@ -34,3 +34,17 @@ table.rmdtable tr, table.rmdtable td {
 /*slides > slide {
   font-size: 26px;
 }*/
+
+
+#wrap {
+   width:100%;
+   margin:0 auto;
+}
+#left_col {
+   float:left;
+   width:60%;
+}
+#right_col {
+   float:right;
+   width:35%;
+}
